feat:修改基础模型

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ OPENROUTER_API_KEY=your_api_key_here
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 
 # Optional: Your app URL for rankings
-HTTP_REFERER=https://codenow.wiki
+HTTP_REFERER=https://jasminides.com
 X_TITLE=codenow
 
 # Logging
